# ml-neilfpp

./: ACKNOWLEDGEMENTS  DATASET_LICENSE  LICENSE  README.md
code/configs/: config_dtu_volsdf.json  config_dtu_volsdf_ngp.json  config_hdr_volsdf_ngp.json  config_synthetic_data.json
code/dataset/: dataset.py
code/evaluation/: evaluate.py
code/model/: density.py  embedder.py  geo_fixmesh.py  geo_volsdf.py  loss.py  neilf_brdf.py  nn_arch.py  ray_sampling.py
code/pyrt/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  optix.cpp  optix7.h  pyrt.cpp
code/pyrt/common/gdt/: CMakeLists.txt
code/pyrt/common/gdt/cmake/: FindOptiX.cmake  FindTBB.cmake  configure_build_type.cmake  configure_glut.cmake  configure_optix.cmake  configure_tbb.cmake
code/pyrt/common/gdt/gdt/: gdt.cpp  gdt.h
code/pyrt/common/gdt/gdt/math/: AffineSpace.h  LinearSpace.h  Quaternion.h  box.h  constants.h  fixedpoint.h  vec.h
code/pyrt/common/gdt/gdt/math/vec/: compare.h  functors.h  rotate.h
code/pyrt/common/gdt/gdt/random/: random.h
code/training/: train.py
code/utils/: general.py  geometry.py  io.py
